[package]
name = "babel"
version = "0.1.0"
authors = ["iovxw <iovxw@outlook.com>"]

[dependencies]
failure = "0.1"
structopt = "0.2"
scraper = "0.7"
actix = "0.6"
actix-web = { version = "0.6", features = ["tls"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.5"
futures = "0.1"
futures-await = "0.1"
tokio = "0.1"
atom_syndication = "0.6"
chrono = "0.4"
uuid = { version = "0.6", features = ["v5"] }